# parakeet-DSL

./: .gitignore  LICENSE  README.md  parakeet-DSL.cabal  template.tex
exe/: Main.hs
src/: Main.hs
src/Control/Monad/: Free.hs
src/Text/Parakeet/: DSL.hs  Linguistics.hs  Primitive.hs  QuasiEmbedFile.hs  Render.hs
src/Text/Parakeet/DSL/: Hiragana.hs  Katakana.hs
