name:                parakeet-DSL
version:             0.1.0.0
homepage:            http://github.com/foreverbell/parakeet-DSL
license:             MIT
license-file:        LICENSE
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2016 foreverbell
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -O2 -fwarn-tabs
  build-depends:       base >= 4.8 && < 5
                     , transformers
                     , mtl
                     , parsec
                     , template-haskell
  exposed-modules:
    Text.Parakeet.DSL
    Text.Parakeet.Render
  other-modules:
    Control.Monad.Free
    Text.Parakeet.DSL.Hiragana
    Text.Parakeet.DSL.Katakana
    Text.Parakeet.Primitive
    Text.Parakeet.QuasiEmbedFile

executable test
  hs-source-dirs:      exe
  ghc-options:         -W -fwarn-tabs
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base, parakeet-DSL
